--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -15,5 +15,10 @@ jobs:
 
       - name: "Docker hub login"
         run: docker login --username ${{secrets.DOCKER_USERNAME}} --password ${{secrets.DOCKER_LOGIN}}
+      
+      - name: "Image build"
+        run: docker build -t ${{secrets.DOCKER_USERNAME}}/FirstImage .
 
+      - name: "Push to docker hub"
+        run: docker push ${{secrets.DOCKER_USERNAME}}/FirstImage
 
