--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -17,8 +17,8 @@ jobs:
         run: docker login --username ${{secrets.DOCKER_USERNAME}} --password ${{secrets.DOCKER_LOGIN}}
       
       - name: "Image build"
-        run: docker build -t ${{secrets.DOCKER_USERNAME}}/FirstImage .
+        run: docker build -t ${{secrets.DOCKER_USERNAME}}/pro1 .
 
       - name: "Push to docker hub"
-        run: docker push ${{secrets.DOCKER_USERNAME}}/FirstImage
+        run: docker push ${{secrets.DOCKER_USERNAME}}/pro1
 
